<resources>
    <string name="app_name" translatable="false">OpenChat</string>

    <string name="default_openai_model" translatable="false">gpt-3.5-turbo</string>

    <string name="second">s</string>
    <string name="min">min</string>
    <string name="request_time">Request time</string>
    <string name="enter_message">Enter chatMessage</string>
    <string name="send">Send</string>
    <string name="view">View</string>
    <string name="view_more">View more</string>
    <string name="share">Share</string>
    <string name="clear">Clear</string>
    <string name="clear_confirm">Are you sure to clear all of messages?</string>
    <string name="clear_desc">Clear the context and reset the current topic.</string>
    <string name="you">You</string>
    <string name="bot">Bot</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="api_key">API Key</string>
    <string name="privacy">Privacy</string>
    <string name="others">Others</string>
    <string name="timeout">Timeout</string>
    <string name="parameters">Parameters</string>
    <string name="temperature">Temperature</string>
    <string name="max_tokens">Max Tokens</string>
    <string name="api_key_missing">API Key is missing, please go to Settings.</string>
    <string name="echo">Echo</string>
    <string name="model">Model</string>
    <string name="tell_me_more">Tell me more</string>
    <string name="save">Save</string>
    <string name="save_desc">Save this chatMessage to %1$s</string>
    <string name="file_name">Filename</string>
    <string name="save_success">Message is saved in %1$s</string>
    <string name="my_files">My Files</string>
    <string name="context">Context</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="casual_chat">Casual Chat</string>
    <string name="casual_prompt">You are a AI assistant that provides assistance and support</string>

    <string name="positive_energy">Positive Energy</string>
    <string name="positive_energy_prompt">Praise me</string>

    <string name="code_assistant">Code Assistant</string>
    <string name="code_assistant_prompt">Conducts code reviews, debugging, refactoring, algorithm,
        implementation, and provides explanations for code</string>

    <string name="translate_assistant">Translate Assistant</string>
    <string name="translate_assistant_prompt">Translate every sentence</string>

    <string name="editor_assistant">Editor Assistant</string>
    <string name="editor_assistant_prompt">Edit every sentence</string>

    <string name="key_init_description">Welcome use OpenChat, you need to have a API Key to first</string>
    <string name="step_one">1. Open \u0020</string>
    <string name="api_keys">API Keys </string>
    <string name="step_two">2. Click \'create new secret key\' to generate an API key if you don\'t already have one</string>
    <string name="step_three">3.Then input your API Key</string>
    <string name="ok">OK</string>
    <string name="chat_connect_error_no_response">OpenAI sse connect error : %s</string>
    <string name="chat_connect_error_has_response">OpenAI sse connect error : %1$s, %2$s</string>
    <string name="add">Add Conversation</string>
    <string name="title">Title</string>
    <string name="conversation_title">Conversation Title</string>
    <string name="prompt">Prompt</string>
    <string name="prompts_hint">The system message helps set the behavior of the assistant</string>
    <string name="new_conversation">New Conversation</string>
    <string name="delete_chat_confirmation">Do you want to delete this conversation and clear all message?</string>
    <string name="edit">Edit</string>

    <string name="temp_creative">Creative</string>
    <string name="temp_balance">Balanced(default)</string>
    <string name="temp_precise">Precise</string>
    <string name="edit_conversation">Edit Conversation</string>

</resources>