<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.bluewhaleyt.component.preferences.TitlePreference
        app:title="@string/settings" />

    <PreferenceCategory
        app:title="@string/privacy"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="pref_openai_api_key"
            app:title="@string/api_key"
            app:icon="@drawable/ic_baseline_key_24"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="pref_openai_model"
            app:title="@string/model"
            app:icon="@drawable/ic_baseline_construction_24"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/model"
            app:entryValues="@array/model"
            app:defaultValue="@string/default_openai_model"/>

        <ListPreference
            app:key="pref_openai_temperature"
            app:title="@string/temperature"
            app:icon="@drawable/ic_outline_auto_awesome_24"
            app:useSimpleSummaryProvider="true"
            app:entryValues="@array/temperature"
            app:entries="@array/temperature"
            app:defaultValue="@string/temp_balance"
            />

    </PreferenceCategory>


</PreferenceScreen>