<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chat_bg_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_conversation"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/conversation_title"
        android:textSize="14sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/prompts_hint"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/ok"
        style="@style/Widget.Material3.Button.TonalButton"
        />

</LinearLayout>

    <!--</androidx.core.widget.NestedScrollView>-->